--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body{
+  
   background:linear-gradient(to right , rgb(82, 82, 210),rgb(52, 184, 52));
 }
 
 .calculator{
+  margin: 0 auto;
   border: 3px solid gray;
   padding: 5px;
   border-radius: 20px;
